132478 - Fix segments spacing

--- a/blocks/v2-product-listing/v2-product-listing.css
+++ b/blocks/v2-product-listing/v2-product-listing.css
@@ -149,7 +149,6 @@
 
 
 .v2-product-listing__segment-list li {
-  padding: 0 16px;
   position: relative;
   font-size: 0.75rem;
   line-height: 1.2;
